--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.13"
 edition = "2021"
 
 [dependencies]
-airplane = "0.1.6" 
+airplane = {path = "../aeroclub/airplane" }  
 actix-web = "4"
 tera = "1.12"
 serde = { version = "1.0", features = ["derive"] }
