--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,5 +1,8 @@
 name: Docker Build and Push on Tag
 
+permissions:
+  contents: write
+
 on:
   push:
     tags:
@@ -36,6 +39,8 @@ jobs:
         git commit -m "chore: update changelog for ${{ env.VERSION }}"
         git tag -fa ${{ env.VERSION }} -m "chore: update changelog for ${{ env.VERSION }}"
         git push origin ${{ env.VERSION }} --force
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
