--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: Extract version without 'v'
       id: extract_version
@@ -35,12 +37,11 @@ jobs:
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git checkout master
+        git pull origin master
         git add CHANGELOG.md
         git commit -m "chore: update changelog for ${{ env.VERSION }}"
-        git tag -fa ${{ env.VERSION }} -m "chore: update changelog for ${{ env.VERSION }}"
-        git push origin ${{ env.VERSION }} --force
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        git push origin master
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
