chore: update deployment.yaml

--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -13,6 +13,8 @@ spec:
     metadata:
       labels:
         app: acm-weight-and-balance
+      annotations:
+        linkerd.io/inject: "enabled"
     spec:
       containers:
       - name: acm-weight-and-balance
